examples/test/testpolicy15813.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15813
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key3: value8
      key6: value40
      key15: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value40
      podSelector:
        matchLabels:
          key8: value4
